test/libyul/yulSyntaxTests/function_defined_in_init_block_3.yul
{
	for { function f() {} } 1:bool {} {}
}
// ----
// SyntaxError 3441: (9-17): Functions cannot be defined inside a for-loop init block.
